Attempt to fix alignment error between boxes - unsolved

--- a/public/style.css
+++ b/public/style.css
@@ -17,6 +17,7 @@ html, body {
 #title {
   width: 90%;
   max-width: 850px;
+  min-width: 850px;
   min-height: 100px;
   display: block;
   margin-top: 50px;
@@ -59,6 +60,7 @@ html, body {
 #form {
   width: 90%;
   max-width: 850px;
+  min-width: 850px;
   min-height: 400px;;
   margin-top: 100px;
   display: block;
